# mini-language-compiler

./: CMakeLists.txt  README.md
examples/: fibonacci.mini
include/: AST.hpp  Compiler.hpp  IRGenerator.hpp  Lexer.hpp  Parser.hpp  Token.hpp  VM.hpp
src/: Compiler.cpp  IRGenerator.cpp  Lexer.cpp  Parser.cpp  Token.cpp  VM.cpp  main.cpp
tests/: CMakeLists.txt  test_basic.cpp
